[package]
name = "parrun"
description = "A command line tool to run multiple commands at the same time."
repository = "https://github.com/AskSkivdal/parrun"
license = "MIT"
authors = ["Ask Skivdal"]
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
colored = "3"